fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ img {
   border-radius: 20px;
   width: 200px;
 }
+/* ! Fix header spacing + fix nav spacing */
 
 header {
   display: flex;
@@ -40,14 +41,13 @@ header {
   position: fixed;
   left: 0;
   top: 0;
-  height: 150px;
   background-color: #685044;
   border-bottom: 2px solid #f9dec9;
 }
 
 header h1 {
   text-align: center;
-  padding-bottom: 1rem;
+  padding-bottom: 21px;
   border-right: none;
 }
 
@@ -56,6 +56,7 @@ nav {
   align-items: center;
   justify-content: center;
   width: 100%;
+  padding-bottom: 21px;
 }
 
 nav a {
@@ -169,5 +170,5 @@ section {
 }
 
 .quicklinks {
-  margin-top: 160px;
+  margin-top: 170px;
 }
